--- a/project.conf
+++ b/project.conf
@@ -1,5 +1,5 @@
 [main]
-active_profile=draft-lq
+active_profile=mobile	
 
 [draft-lq]
 WIDTH=480
@@ -10,7 +10,7 @@ blender.cycles_samples=10
 blender.prerender_count=0
 BLENDER_VERSION=2.70
 blender.packet_size=20
-proxy_scale=0.5
+proxy_scale=1
 
 [draft]
 WIDTH=480
@@ -24,6 +24,16 @@ proxy_scale=1.0
 [hd]
 WIDTH=1280
 HEIGHT=720
+FORMAT=avi
+AUDIO_RATE=48000
+blender.cycles_samples=75
+blender.packet_size=10
+proxy_scale=1.0
+
+
+[mobile]
+WIDTH=700
+HEIGHT=1600
 FORMAT=avi
 AUDIO_RATE=48000
 blender.cycles_samples=75
