modified:   .gitignore 	modified:   extras/3D/corporate-building-interior.blend 	modified:   extras/backgrounds/shot 4 Background.psd 	modified:   extras/spritesheets/spritesheet.kra 	modified:   extras/spritesheets/spritesheet.kra~ 	modified:   inputs/shot 6/shot 6 animation fbf.kra 	modified:   project.blend 	modified:   project.conf 	modified:   scenes/Shot 1.tnz 	modified:   scenes/Shot 1.tnz.bak 	modified:   scenes/Shot 3.tnz 	modified:   scenes/Shot 3.tnz.bak 	modified:   scenes/Shot 39.tnz 	modified:   scenes/Shot 39.tnz.bak 	modified:   scenes/Shot 4.tnz 	modified:   scenes/Shot 4.tnz.bak 	modified:   scenes/Shot 5.tnz 	modified:   scenes/Shot 5.tnz.bak 	modified:   scenes/Shot 7.tnz 	modified:   scenes/sceneIcons/Shot 1 .png 	modified:   scenes/sceneIcons/Shot 3 .png 	modified:   scenes/sceneIcons/Shot 39 .png 	modified:   scenes/sceneIcons/Shot 4 .png 	modified:   scenes/sceneIcons/Shot 7 .png 	modified:   scenes/sceneIcons/spritesheet .png 	modified:   scenes/sceneIcons/title animation .png 	modified:   scenes/shot 0.tnz 	modified:   scenes/shot 0.tnz.bak 	modified:   scenes/shot 50.tnz 	modified:   scenes/shot 6.tnz 	modified:   scenes/shot 6.tnz.bak 	modified:   scenes/shot 8.tnz 	modified:   scenes/shot 8.tnz.bak 	modified:   scenes/spritesheet.tnz 	modified:   scenes/spritesheet.tnz.bak 	modified:   scenes/title animation.tnz

--- a/project.conf
+++ b/project.conf
@@ -30,9 +30,18 @@ blender.cycles_samples=75
 blender.packet_size=10
 proxy_scale=1.0
 
+[youtube]
+WIDTH=1920
+HEIGHT=1080
+FORMAT=avi
+AUDIO_RATE=48000
+blender.cycles_samples=75
+blender.packet_size=10
+proxy_scale=1.0
+
 
 [mobile]
-WIDTH=700
+WIDTH=720
 HEIGHT=1600
 FORMAT=avi
 AUDIO_RATE=48000
